# midi-file-player

./: CMakeLists.txt  README.md  main.cpp
include/: Instrument.h  RtMidi.h
src/: Instrument.cpp  swti.cpp
